src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A32_2.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A32_2 {
  interface A1;
  interface B1;
  read-only association A1 -> (foo) B1 [0..1];

  class A2 implements A1;
  class B2 implements B1;

  class A3 extends A2;
  class B3 extends B2;
  association A3 -> (foo) B3 [1..*]; // error, because 1..* is subset of 0..1
}
